<resources>
    <string name="app_name">Banana</string>
    <string name="edit_name">Edit Receipt</string>
    <string name="button_done">Done</string>
    <string name="add_item">Add</string>
    <string name="title_activity_add_item">AddOrder</string>
    <string name="new_item">Item:</string>
    <string name="new_price">Price:</string>
    <string name="edit_message">Enter a message plz</string>
    <string name="button_send">Send</string>
    <string name="take_picture">New Receipt</string>
    <string name="old_receipt">History</string>
    <string name="settings">Settings</string>
    <string name="facebook_app_id">152449388620006</string>
    <string name="fb_login_protocol_scheme">fb152449388620006</string>
    <string name="button_send">Crop</string>
    <string name="take_picture">Take A Picture</string>
</resources>
