<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="16dp"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/list"
        android:layout_marginTop="9dp"
        android:text="@string/add_item" />

    <Button
        android:id="@+id/done_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_alignParentRight="true"
        android:layout_below="@android:id/list"
        android:text="@string/button_done" />

</RelativeLayout>